feat add navbar

--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Pro</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <!-- Start Navbar Wrapper -->
+    <div class="w-full bg-white shadow">
+        <nav class="flex justify-between items-center mx-auto max-w-6xl">
+            <div class="flex items-center gap-x-2">
+                <span class="bg-[#1565c0] p-2 mr-2 flex items-center justify-center rounded">
+                    <i data-lucide="sun" class="w-6 h-6 text-white"></i>
+                </span>
+                <a href="#" class="text-xl font-bold">WeatherPro</a>
+            </div>
+            <div class="flex text-lg">
+                <!-- Ajoute ici si besoin -->
+            </div>
+            <div class="flex items-center gap-x-3">
+                <div class="flex items-center border border-gray-300 rounded px-2 bg-white">
+                    <i data-lucide="search" class="w-5 h-5 text-gray-500"></i>
+                    <input
+                        type="text"
+                        id="search-navbar"
+                        class="p-2 pl-2 rounded-none outline-none bg-transparent"
+                        placeholder="Rechercher une ville"
+                    >
+                </div>
+                <a href="#" class="p-4 cursor-pointer"><i data-lucide="settings"></i></a>
+            </div>
+        </nav>
+    </div>
+    <!-- End Navbar Wrapper -->
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+        lucide.createIcons();
+    </script>
 </body>
 </html>
