--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body class="bg-[#f3f4f6]">
     <!-- Start Navbar Wrapper -->
-    <div class="w-full bg-white shadow">
+    <div class="w-full bg-white shadow px-4">
         <nav class="flex justify-between items-center mx-auto max-w-6xl">
             <div class="flex items-center gap-x-2">
-                <span class="bg-[#1565c0] p-2 mr-2 flex items-center justify-center rounded">
+                <span class="bg-gradient-to-r from-blue-500 to-purple-600 p-2 mr-2 flex items-center justify-center rounded">
                     <i data-lucide="sun" class="w-6 h-6 text-white"></i>
                 </span>
                 <a href="#" class="text-xl font-bold">WeatherPro</a>
@@ -35,25 +35,24 @@
 
 
     <!-- Main Container -->
-    <div class="max-w-6xl mx-auto pt-10">
+    <div class="max-w-6xl mx-auto pt-10 px-2 sm:px-4">
 
         <!-- Start Weather Card -->
-        <div class="w-full rounded-2xl bg-gradient-to-r from-blue-500 to-purple-600 text-white p-8 flex justify-between items-center shadow-lg mb-8">
-            <div>
-                <h1 class="text-xl font-semibold">Paris, France</h1>
-                <p class="text-sm text-white/80">Mercredi, 16 Décembre 2024</p>
-            
+        <div class="w-full rounded-2xl bg-gradient-to-r from-blue-500 to-purple-600 text-white p-4 sm:p-8 flex flex-col lg:flex-row gap-6 justify-between items-center shadow-lg mb-8">
+            <div class="w-full lg:w-1/2">
+                <h1 class="text-lg sm:text-xl font-semibold">Paris, France</h1>
+                <p class="text-xs sm:text-sm text-white/80">Mercredi, 16 Décembre 2024</p>
                 <div class="mt-4 flex items-end space-x-4">
-                    <span class="text-5xl font-light">22°</span>
+                    <span class="text-4xl sm:text-5xl font-light">22°</span>
                     <div>
-                        <p class="text-xl">Ensoleillé</p>
-                        <p class="text-sm text-white/80">Ressenti 25°</p>
+                        <p class="text-base sm:text-xl">Ensoleillé</p>
+                        <p class="text-xs sm:text-sm text-white/80">Ressenti 25°</p>
                     </div>
                 </div>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="flex flex-col items-center w-full lg:w-auto mt-6 lg:mt-0">
                 <i data-lucide="sun" class="w-16 h-16 text-yellow-300"></i>
-                <div class="text-sm mt-2 text-center">
+                <div class="text-xs sm:text-sm mt-2 text-center">
                     <p>Max: 26°</p>
                     <p>Min: 18°</p>
                 </div>
@@ -61,11 +60,63 @@
         </div>
         <!-- End Weather Card -->
 
+        <!-- Start Weather Details -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-8 mb-8">
+          <div class="bg-white rounded-xl shadow p-4 flex flex-col justify-between">
+            <div class="flex justify-between items-center">
+              <h3 class="text-sm text-gray-600 font-medium">Indice UV</h3>
+              <i data-lucide="sun-medium" class="text-orange-500 w-5 h-5"></i>
+            </div>
+            <p class="text-3xl font-bold mt-2">7</p>
+            <div class="w-full bg-gray-200 h-2 rounded mt-2">
+              <div class="bg-orange-500 h-2 rounded w-2/3"></div>
+            </div>
+            <p class="text-sm text-gray-500 mt-2">Élevé</p>
+          </div>
+
+          <div class="bg-white rounded-xl shadow p-4 flex flex-col justify-between">
+            <div class="flex justify-between items-center">
+              <h3 class="text-sm text-gray-600 font-medium">Humidité</h3>
+              <i data-lucide="droplets" class="text-blue-500 w-5 h-5"></i>
+            </div>
+            <p class="text-3xl font-bold mt-2">68%</p>
+            <div class="w-full bg-gray-200 h-2 rounded mt-2">
+              <div class="bg-blue-500 h-2 rounded w-[68%]"></div>
+            </div>
+            <p class="text-sm text-gray-500 mt-2">Normal</p>
+          </div>
+
+          <div class="bg-white rounded-xl shadow p-4 flex flex-col justify-between">
+            <div class="flex justify-between items-center">
+              <h3 class="text-sm text-gray-600 font-medium">Vent</h3>
+              <i data-lucide="wind" class="text-gray-500 w-5 h-5"></i>
+            </div>
+            <p class="text-3xl font-bold mt-2">12</p>
+            <p class="text-sm text-gray-500">km/h Nord-Est</p>
+            <div class="mt-4">
+              <div class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center">
+                <i data-lucide="arrow-down-right"></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-white rounded-xl shadow p-4 flex flex-col justify-between">
+            <div class="flex justify-between items-center">
+              <h3 class="text-sm text-gray-600 font-medium">Pression</h3>
+              <i data-lucide="gauge" class="text-purple-600 w-5 h-5"></i>
+            </div>
+            <p class="text-3xl font-bold mt-2">1013</p>
+            <p class="text-sm text-gray-500">hPa</p>
+            <p class="text-sm text-green-500 mt-2">↑ Stable</p>
+          </div>
+        </div>
+        <!-- End Weather Details -->
+
         <!-- Start Weather Forecast -->
-        <div class="grid grid-cols-12 gap-4 mb-8">
-            <div class="col-span-8 bg-white rounded-lg p-4">
+        <div class="grid grid-cols-1 lg:grid-cols-12 gap-4 mb-8">
+            <div class="lg:col-span-8 bg-white rounded-lg p-4 overflow-x-auto">
                 <h3 class="font-bold mb-4">Prévisions 7 jours</h3>
-                <div class="flex flex-col gap-3">
+                <div class="flex flex-col gap-3 min-w-[320px]">
                     <div class="flex items-center justify-between p-3 bg-blue-50 rounded-lg mb-2">
                         <div class="flex items-center gap-3 text-sm">
                             <span class="font-semibold w-22">Aujourd'hui</span>
@@ -127,13 +178,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-span-4 bg-white rounded-lg">2</div>
+            <div class="lg:col-span-4 bg-white rounded-lg mt-4 lg:mt-0">2</div>
         </div>
         <!-- End Weather Forecast  -->
 
-
         <!-- Start Weather Map -->
-        <div class="bg-white rounded-lg relative p-6 mt-8">
+        <div class="bg-white rounded-lg relative p-4 sm:p-6 mt-8">
             <h3 class="font-bold">Carte Météo</h3>
             <div class="bg-[#cadffe] text-[#406bd8] relative rounded-lg mt-6 p-4 flex flex-col items-center lg:py-20">
                 <i data-lucide="map-pin" class="size-14 ml-2"></i>
