--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <!-- End Weather Details -->
 
         <!-- Start Weather Forecast -->
-        <!-- <div class="grid grid-cols-12 gap-10 mb-8">
-            <div class="col-span-8 bg-white rounded-lg p-4 shadow h-fit">
+        <div class="grid lg:grid-cols-12 lg:gap-10 gap-8 mb-8">
+            <div class="lg:col-span-8 bg-white rounded-lg p-4 shadow lg:h-fit">
                 <h3 class="font-bold mb-4">Prévisions 7 jours</h3>
                 <div class="flex flex-col gap-5 min-w-[320px]">
                     <div class="flex items-center justify-between p-3 bg-blue-50 rounded-lg mb-2">
@@ -181,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-span-4 bg-white rounded-lg p-4 flex flex-col gap-5 shadow">
+            <div class="lg:col-span-4 bg-white rounded-lg p-4 flex flex-col gap-5 shadow">
                 <div>
                     <h3 class="font-bold mb-4">Température (24h)</h3>
                     <div class="flex items-end justify-between h-32 w-full mb-2">
@@ -256,7 +256,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- End Weather Forecast  -->
 
         <!-- Start Weather Map -->
